--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField "String", "BASE_URL", '"https://api.github.com"'
     }
 
     buildTypes {
@@ -56,6 +58,7 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:2.44"
     implementation "androidx.room:room-runtime:2.4.3"
     kapt "androidx.room:room-compiler:2.4.3"
+    implementation 'com.jakewharton.timber:timber:5.0.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 }
