--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     implementation 'androidx.security:security-crypto:1.0.0'
     implementation "androidx.room:room-runtime:2.4.3"
+    implementation "androidx.room:room-ktx:2.4.3"
     kapt "androidx.room:room-compiler:2.4.3"
     implementation 'com.google.android.material:material:1.7.0'
     implementation "com.google.dagger:hilt-android:2.44"
@@ -67,9 +68,10 @@ dependencies {
     implementation 'com.squareup.moshi:moshi:1.14.0'
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.13.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 
     testImplementation 'junit:junit:4.13.2'
-    implementation 'com.jakewharton.timber:timber:5.0.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation "androidx.room:room-testing:2.4.3"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 }
