--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,12 @@ android {
     compileSdk 33
 
     defaultConfig {
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation":
+                                     "$projectDir/schemas".toString()]
+            }
+        }
         applicationId "com.example.igeniusandroidtest"
         minSdk 23
         targetSdk 33
