--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,7 +79,13 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
 
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "androidx.test:core:1.5.0"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
+    testImplementation "io.mockk:mockk:1.12.2"
+    testImplementation 'app.cash.turbine:turbine:0.12.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation "androidx.room:room-testing:2.4.3"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
 }
